Creating About Me section

--- a/index.html
+++ b/index.html
@@ -17,5 +17,14 @@
             <a href="https://www.linkedin.com/in/gabrielfrcordeiro/"><img src="img/linkedin-logo.svg" alt="Meu LinkedIn" class="banner__social-media__icon"></a>
         </div>
     </header>
+
+    <section class="about-me">
+        <img src="img/gabriel-cordeiro.svg" alt="Gabriel Cordeiro" class="about-me__picture">
+        <div class="about-me__text">
+            <h1 class="about-me__text__heading">About Me</h1>
+            <p class="about-me__text__summary">I'm a front-end developer, certified in HTML, JavaScript and ReactJS. I work as a freelancer, focused in offering the best client experience.</p>
+            <a href="#" class="about-me__text__click"><p class="about-me__text__click__more">(See my complete history)</p></a>
+        </div>
+    </section>
 </body>
 </html>
