Creating Skills section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,16 @@
             <a href="#" class="about-me__text__click"><p class="about-me__text__click__more">(See my complete history)</p></a>
         </div>
     </section>
+
+    <section class="skills-and-certificates">
+        <div class="skills-and-certificates__skills">
+            <img src="img/html-logo.svg" alt="HTML" class="skills-and-certificates__skills__logos">
+            <img src="img/sass-logo.svg" alt="SASS" class="skills-and-certificates__skills__logos">
+            <img src="img/javascript-logo.svg" alt="JavaScript" class="skills-and-certificates__skills__logos">
+            <img src="img/wordpress-logo.svg" alt="WordPress" class="skills-and-certificates__skills__logos">
+            <img src="img/figma-logo.svg" alt="Figma" class="skills-and-certificates__skills__logos">
+            <img src="img/react-logo.svg" alt="React" class="skills-and-certificates__skills__logos">
+        </div>
+    </section>
 </body>
 </html>
