Creating Certificates carousel

--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
             <img src="img/figma-logo.svg" alt="Figma" class="skills-and-certificates__skills__logos">
             <img src="img/react-logo.svg" alt="React" class="skills-and-certificates__skills__logos">
         </div>
+        
+        <div class="skills-and-certificates__certificates certificates-carousel">
+            <div class="certificates-carousel__inner">
+                <img src="img/javascript-codecamp-certificate.svg" alt="JavaScript codecamp certificate">
+                <img src="img/react-certificate.svg" alt="React certificate">
+                <img src="img/ux-certificate.svg" alt="UX certificate">
+                <img src="img/javascript-certificate.svg" alt="JavaScript certificate">
+                <img src="img/html-css-certificate.svg" alt="HTML and CSS certificate">
+            </div>
+            <div class="certificates-carousel__bubbles"></div>
+            <div class="certificates-carousel__previous"></div>
+            <div class="certificates-carousel__next"></div>
+        </div>
     </section>
+
+    <script src="js/certificates-carousel.js"></script>
 </body>
 </html>
