--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="img/gabriel-cordeiro.svg" alt="Gabriel Cordeiro" class="about-me__picture">
         <div class="about-me__text">
             <h1 class="about-me__text__heading">About Me</h1>
-            <p class="about-me__text__summary">I'm a front-end developer, certified in HTML, JavaScript and ReactJS. I work as a freelancer, focused in offering the best client experience.</p>
+            <p class="about-me__text__summary">I'm a front-end developer, certified in HTML, JavaScript and ReactJS. I'm always focused in offering the best client experience.</p>
             <a href="#" class="about-me__text__click"><p class="about-me__text__click__more">(See my complete history)</p></a>
         </div>
     </section>
@@ -50,6 +50,22 @@
             <div class="certificates-carousel__next"></div>
         </div>
     </section>
+
+    <form action="" class="contact-me">
+        <h1 class="contact-me__heading">Contact Me</h1>
+        <p class="contact-me__summary">Thanks for choosing me! Please use this space to tell me more about you and your project!</p>
+        
+        <label for="name" class="contact-me__label">Name:</label>
+        <input type="text" name="" id="name" placeholder="ex: Gabriel Cordeiro" required class="contact-me__input">
+        
+        <label for="email" class="contact-me__label">E-mail:</label>
+        <input type="email" name="" id="email" placeholder="ex: email@example.com" required class="contact-me__input">
+
+        <label for="message" class="contact-me__label">Message:</label>
+        <textarea name="message" id="message" cols="40" rows="5" placeholder="Write what you want me to do for you and your project!" required class="contact-me__input" maxlength="254"></textarea>
+
+        <input type="button" value="SEND" class="contact-me__button">
+    </form>
 
     <script src="js/certificates-carousel.js"></script>
 </body>
