--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="about-me__text">
             <h1 class="about-me__text__heading">About Me</h1>
             <p class="about-me__text__summary">I'm a front-end developer, certified in HTML, JavaScript and ReactJS. I'm always focused in offering the best client experience.</p>
-            <a href="#" class="about-me__text__click"><p class="about-me__text__click__more">(See my complete history)</p></a>
+            <a href="pages/about-me.html" class="about-me__text__click"><p class="about-me__text__click__more">(See my complete history)</p></a>
         </div>
     </section>
 
