--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Get to know more of Gabriel Cordeiro's work as a front-end developer.">
 
+    <link rel="canonical" href="https://gabrielfrcordeiro.github.io/portifolio/>
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_io/favicon-16x16.png">
@@ -27,7 +29,7 @@
         <img src="img/gabriel-cordeiro.svg" alt="Gabriel Cordeiro" class="about-me__picture">
         <div class="about-me__text">
             <h1 class="about-me__text__heading">About Me</h1>
-            <p class="about-me__text__summary">I'm a front-end developer, certified in HTML, JavaScript and ReactJS. I'm always focused in offering the best client experience.</p>
+            <p class="about-me__text__summary">I'm a certified front-end developer, always focused in offering the best client experience.</p>
             <a href="pages/about-me.html" class="about-me__text__click"><p class="about-me__text__click__more">(See my complete history)</p></a>
         </div>
     </section>
