--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get to know more of Gabriel Cordeiro's work as a front-end developer.">
 
-    <link rel="canonical" href="https://gabrielfrcordeiro.github.io/portifolio/>
+    <link rel="canonical" href="https://gabrielfrcordeiro.github.io/portifolio/">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_io/favicon-16x16.png">
